resolves #46 enable search on mobile
- assign fixed height to search box on mobile
- make max height of search results account for height of search box
- configure search results to span width of screen on mobile
- configure search results to have width of 28rem on larger screens

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -246,7 +246,16 @@ body {
   }
 
   .navbar-end .navbar-item.search {
-    display: none;
+    height: 3rem;
+    display: flex;
+  }
+
+  #search {
+    position: relative; /* make results relative to whole search field, not just input */
+  }
+
+  #search > .algolia-autocomplete {
+    position: static !important;
   }
 }
 
